--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         <div class="about-container">
             <div class="image-container">
                 <h2>Web Design</h2>
-                <img src="/undraw_Designer_light.svg" alt="about me image undraw" id="image1">
+                <img src="/undraw_Designer_light.svg?sanitize=true" alt="about me image undraw" id="image1">
             </div>
             <div class="image-container">
                 <h2>Problem Solving</h2>
-                <img src="/undraw_solution_mindset_light.svg" alt="about me image undraw" id="image2">
+                <img src="/undraw_solution_mindset_light.svg?sanitize=true" alt="about me image undraw" id="image2">
             </div>
             <div class="image-container">
                 <h2>Data Analyst</h2>
-                <img src="/undraw_data_reports_light.svg" alt="about me image undraw" id="image3">
+                <img src="/undraw_data_reports_light.svg?sanitize=true" alt="about me image undraw" id="image3">
             </div>
         </div>
     </section>
